--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 clap = "3.0.0-beta.1"
-eve_online_api = { path = "../api" }
+eve_online_api = { path = "../eve_api" }
 indicatif = "0.15.0"
 log = "0.4.11"
 loggify = "1.4.0"
