--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ codegen-units = 1
 
 [workspace]
 members = [
-  'cli',
+  #'cli',
   'eve_api',
-  'sde_parser'
+  'eve_sde_parser',
+  'server',
 ]
