--- a/eve_api/Cargo.toml
+++ b/eve_api/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.11"
-reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
-serde = { version = "1.0.115", default-features = false, features = ["derive"] }
+serde = { version = "1.0.116", default-features = false, features = ["derive"] }
+surf = "2.0.0"
