--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Lars Holznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
-async-std = "1.6.5"
+async-std = { version = "1.6.5", features = ["attributes"] }
 clap = "3.0.0-beta.1"
 eve_online_api = { path = "../eve_api" }
 indicatif = "0.15.0"
@@ -13,3 +13,6 @@ log = "0.4.11"
 loggify = "1.4.0"
 num-format = "0.4.0"
 prettytable-rs = "0.8.0"
+serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0.59"
+surf = "2.1.0"
