--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 async-std = { version = "1.6.5", features = ["attributes", "tokio02"] }
 eve_online_api = { path = "../eve_api" }
 eve_sde_parser = { path = "../eve_sde_parser" }
-futures = "0.3.6"
+futures = "0.3.7"
 log = "0.4.11"
 morgan = { path = "../morgan" }
-rusoto_cloudwatch = "0.45.0"
-serde = { version = "1.0.116", features = ["derive"] }
-surf = "2.0.0"
-tide = "0.13.0"
+rusoto_cloudwatch = { version = "0.45.0", default-features = false, features = ["rustls"] }
+serde = { version = "1.0.117", features = ["derive"] }
+surf = "2.1.0"
+tide = "0.14.0"
