--- a/eve_sde_parser/Cargo.toml
+++ b/eve_sde_parser/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eve_sde_parser"
+name = "caph_eve_sde_parser"
 version = "0.1.0"
 authors = ["Lars Holznagel <contact@lholznagel.info>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 miniz_oxide = "0.4.3"
 serde = { version = "1.0.117", features = ["derive"] }
-serde_yaml = "0.8.13"
+serde_yaml = "0.8.14"
