--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-
 [profile.release]
 lto = true
 panic = 'abort'
@@ -8,6 +7,7 @@ codegen-units = 1
 [workspace]
 members = [
   #'cli',
+  'collector',
   'eve_api',
   'eve_sde_parser',
   'server',
