--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,6 @@ futures = "0.3.8"
 log = "0.4.11"
 morgan = { path = "../morgan" }
 serde = { version = "1.0.117", features = ["derive"] }
-sqlx = { version = "0.4.1", default-featues = false, features = ["runtime-async-std-rustls", "sqlite"] }
+sqlx = { version = "0.4.1", default-features = false, features = ["macros", "runtime-async-std-rustls", "postgres"] }
 surf = "2.1.0"
 tide = "0.15.0"
