--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 async-std = { version = "1.7.0", features = ["attributes"] }
+caph_eve_online_api = { path = "../eve_api" }
 futures = "0.3.8"
 log = "0.4.11"
 morgan = { path = "../morgan" }
