--- a/web/package.json
+++ b/web/package.json
@@ -1,20 +1,31 @@
 {
+  "name": "web",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start:dev": "webpack-dev-server --mode development"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "apexcharts": "^3.22.2",
+    "axios": "0.20.0",
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "1.3.1",
-    "copy-webpack-plugin": "6.3.0",
-    "css-loader": "5.0.1",
-    "sass": "1.29.0",
-    "sass-loader": "10.0.5",
-    "style-loader": "2.0.0",
-    "wasm-pack": "0.9.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.4",
-    "webpack-dev-server": "3.11.0"
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
