--- a/eve_api/Cargo.toml
+++ b/eve_api/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.11"
-serde = { version = "1.0.117", default-features = false, features = ["derive"] }
-serde_json = "1.0.59"
-surf = "2.1.0"
+reqwest = { version = "0.10.9", default-features = false, features = ["json", "rustls-tls"] }
+serde = { version = "1.0.118", default-features = false, features = ["derive"] }
+serde_json = "1.0.60"
