--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,12 +5,11 @@ authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
-async-std = { version = "1.7.0", features = ["attributes"] }
+async-std = { version = "1.8.0", features = ["attributes", "tokio02"] }
 caph_eve_online_api = { path = "../eve_api" }
 futures = "0.3.8"
 log = "0.4.11"
 morgan = { path = "../morgan" }
-serde = { version = "1.0.117", features = ["derive"] }
+serde = { version = "1.0.118", features = ["derive"] }
 sqlx = { version = "0.4.1", default-features = false, features = ["macros", "runtime-async-std-rustls", "postgres"] }
-surf = "2.1.0"
 tide = "0.15.0"
