--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,5 +11,5 @@ futures = "0.3.8"
 log = "0.4.11"
 morgan = { path = "../morgan" }
 serde = { version = "1.0.118", features = ["derive"] }
-sqlx = { version = "0.4.1", default-features = false, features = ["macros", "runtime-async-std-rustls", "postgres"] }
+sqlx = { version = "0.4.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres"] }
 tide = "0.15.0"
