--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -9,8 +9,7 @@ caph_eve_online_api = { path = "../eve_api" }
 caph_eve_sde_parser = { path = "../eve_sde_parser" }
 futures = "0.3.8"
 log = "0.4.11"
-metrics-exporter-http = "0.3.0"
-metrics-runtime = "0.13.1"
 morgan = { path = "../morgan" }
+metrix = { path = "../metrix" }
 sqlx = { version = "0.4.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres"] }
 tokio = { version = "0.2.24", features = ["macros", "rt-threaded", "time", "stream"] }
