--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ codegen-units = 1
 
 [workspace]
 members = [
+  'carina',
   'collector',
+  'collector_v2',
   'eve_api',
   'eve_sde_parser',
   'server'
