--- a/db/systemd.service
+++ b/db/systemd.service
@@ -6,6 +6,8 @@ Type=simple
 Environment=MORGAN_COLOR=false
 Environment=RUST_BACKTRACE=1
 ExecStart=/opt/caph/caph_db
+WorkingDirectory=/var/caph
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
