--- a/db/systemd.service
+++ b/db/systemd.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=Caph database
+After=metrix_db.service
 
 [Service]
 Type=simple
 Environment=MORGAN_COLOR=false
 Environment=RUST_BACKTRACE=1
+ExecStartPre=/bin/sleep 2
 ExecStart=/opt/caph/caph_db
 WorkingDirectory=/var/caph
 Restart=always
