--- a/web/package.json
+++ b/web/package.json
@@ -7,20 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "apexcharts": "^3.22.2",
-    "axios": "0.20.0",
-    "vue": "^2.6.11",
-    "vue-apexcharts": "^1.6.0",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11"
+    "apexcharts": "3.25.0",
+    "axios": "0.21.1",
+    "vue": "2.6.12",
+    "vue-apexcharts": "1.6.0",
+    "vue-class-component": "7.2.6",
+    "vue-property-decorator": "9.1.2",
+    "vue-router": "3.5.1",
+    "vuetify": "2.4.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@types/echarts": "4.9.3",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "typescript": "~3.9.3",
