--- a/web/package.json
+++ b/web/package.json
@@ -7,10 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "apexcharts": "3.25.0",
     "axios": "0.21.1",
+    "echarts": "5.0.2",
     "vue": "2.6.12",
-    "vue-apexcharts": "1.6.0",
+    "vue-echarts": "6.0.0-alpha.5",
     "vue-class-component": "7.2.6",
     "vue-property-decorator": "9.1.2",
     "vue-router": "3.5.1",
@@ -27,6 +27,7 @@
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "@vue/composition-api": "1.0.0-rc.2"
   }
 }
