--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1.42"
-#cachem = { git = "https://github.com/lholznagel/cachem.git", rev = "7056e10887b8061ceb15b1efd9b2ff3cec0e15e9" }
 cachem = { path = "../../cachem/cachem" }
 caph_db = { path = "../db" }
 caph_eve_online_api = { path = "../eve_api" }
@@ -14,5 +13,6 @@ caph_eve_sde_parser = { path = "../eve_sde_parser" }
 chrono = "0.4.19"
 futures = "0.3.12"
 log = "0.4.14"
+metrix_exporter = { path = "../../metrix/exporter" }
 morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
 tokio = { version = "1.2.0", features = ["full"] }
