--- a/eve_api/Cargo.toml
+++ b/eve_api/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["lholznagel"]
 edition = "2018"
 
 [dependencies]
+base64 = "0.13.0"
 log = "0.4.11"
-reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11.0", default-features = false, features = ["json", "multipart", "rustls-tls"] }
 serde = { version = "1.0.118", default-features = false, features = ["derive"] }
 serde_json = "1.0.61"
+url = "2.2.1"
