--- a/eve_api/Cargo.toml
+++ b/eve_api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 base64 = "0.13.0"
 log = "0.4.11"
+metrix_exporter = { path = "../../metrix/exporter" }
 reqwest = { version = "0.11.0", default-features = false, features = ["json", "multipart", "rustls-tls"] }
 serde = { version = "1.0.118", default-features = false, features = ["derive"] }
 serde_json = "1.0.61"
