--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1.42"
 cachem = { path = "../../cachem/cachem" }
-caph_db = { path = "../db" }
+caph_db_v2 = { path = "../db_v2" }
 caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
 chrono = "0.4.19"
 futures = "0.3.12"
