--- a/db_v2/Cargo.toml
+++ b/db_v2/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
-name = "caph_server"
+name = "caph_db_v2"
 version = "0.1.0"
 authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
-cachem = { path = "../../cachem/cachem", features = ["derive"] }
-caph_db_v2 = { path = "../db_v2", features = ["with_serde"] }
-caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
+async-trait = "0.1.42"
 chrono = "0.4.19"
+cachem = { path = "../../cachem/cachem", features = ["derive"] }
+caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
 log = "0.4.14"
 morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
-metrix_exporter = { path = "../../metrix/exporter" }
-serde = { version = "1.0.123", features = ["derive"] }
-serde_json = "1.0.61"
-tokio = { version = "1.5.0", features = ["full"] }
-warp = "0.3.0"
+tokio = { version = "1.2.0", features = ["full"] }
+
+serde = { version = "1.0.123", features = ["derive"], optional = true }
+
+[features]
+default    = []
+with_serde = ["serde"]
