--- a/eve_data_wrapper/Cargo.toml
+++ b/eve_data_wrapper/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
+async-trait = "0.1.50"
 base64 = "0.13.0"
+cachem = { path = "../../cachem/cachem", features = ["derive"] }
 chrono = "0.4.19"
 log = "0.4.14"
 reqwest = { version = "0.11.3", default-features = false, features = ["json", "multipart", "rustls-tls"] }
