--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -7,12 +7,11 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1.42"
 cachem = { path = "../../cachem/cachem" }
-caph_db_v2 = { path = "../db_v2" }
+caph_db = { path = "../db" }
 caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
 chrono = "0.4.19"
 futures = "0.3.12"
 log = "0.4.14"
-metrix_exporter = { path = "../../metrix/exporter" }
 morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
 tokio = { version = "1.2.0", features = ["full"] }
 
