--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -5,15 +5,11 @@ authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
-async-trait = "0.1.42"
-cachem = { path = "../../cachem/cachem" }
-caph_db = { path = "../db" }
 caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
 chrono = "0.4.19"
-futures = "0.3.12"
-log = "0.4.14"
-morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
+dotenv = "0.15.0"
+sqlx = { version = "0.5.7", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline"] }
 tokio = { version = "1.2.0", features = ["full"] }
-
-# remove
-serde_json = "1.0.64"
+tracing = "0.1.27"
+tracing-subscriber = "0.2.22"
+uuid = { version = "0.8.2", features = ["v4"]}
