Asset management progress

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,6 @@ Cargo.lock
 pkg/
 dist/
 node_modules
-sde.zip
-sde.checksum
-db/db
-db_v2/db
-cache
-server_v2/assets
+sde*
 skillplans.out.json
 evemon_to_json/skillplans/*
