--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -5,11 +5,15 @@ authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
+axum = "0.2.8"
 caph_connector = { path = "../connector" }
 chrono = "0.4.19"
 dotenv = "0.15.0"
-sqlx = { version = "0.5.7", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline"] }
+log = "0.4.14"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
+sqlx = { version = "0.5.9", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline"] }
 tokio = { version = "1.12.0", features = ["full"] }
-tracing = "0.1.28"
-tracing-subscriber = "0.2.24"
+tracing = "0.1.29"
+tracing-subscriber = "0.2.25"
 uuid = { version = "0.8.2", features = ["v4"] }
