--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,20 +1,19 @@
 [package]
 name = "caph_server"
 version = "0.1.0"
-authors = ["lholznagel <contact@lholznagel.info>"]
 edition = "2018"
 
 [dependencies]
-cachem = { path = "../../cachem/cachem", features = ["derive"] }
-caph_db = { path = "../db", features = ["with_serde"] }
-caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
+async-trait = "0.1.51"
+axum = { version = "0.2.8", features = ["headers"] }
+caph_connector = { path = "../connector" }
 chrono = "0.4.19"
-log = "0.4.14"
-morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
-rand = "0.8.3"
-rand_chacha = "0.3.1"
-serde = { version = "1.0.126", features = ["derive"] }
-serde_json = "1.0.64"
-tokio = { version = "1.6.1", features = ["full"] }
-uuid = { version = "0.8.2", features = ["serde", "v4"] }
-warp = "0.3.1"
+dotenv = "0.15.0"
+headers = "0.3.4"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
+sqlx = { version = "0.5.9", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline"] }
+tokio = { version = "1.12.0", features = ["full"] }
+tracing = "0.1.29"
+tracing-subscriber = "0.2.25"
+uuid = { version = "0.8.2", features = ["v4", "serde"] }
