--- a/collector/Cargo.toml
+++ b/collector/Cargo.toml
@@ -12,7 +12,8 @@ dotenv = "0.15.0"
 log = "0.4.14"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
-sqlx = { version = "0.5.9", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline"] }
+sqlx = { version = "0.5.9", features = ["chrono", "runtime-tokio-rustls",
+"postgres", "uuid", "offline", "json"] }
 tokio = { version = "1.12.0", features = ["full"] }
 tracing = "0.1.29"
 tracing-subscriber = "0.2.25"
