--- a/connector/Cargo.toml
+++ b/connector/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.51"
 base64 = "0.13.0"
-reqwest = { version = "0.11.5", features = ["json"] }
+reqwest = { version = "0.11.5", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 serde_yaml = "0.8.21"
