--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [profile.release]
-codegen-units = 1
+#codegen-units = 1
 debug = true
 lto = true
 opt-level = 3
@@ -7,9 +7,12 @@ panic = 'abort'
 
 [workspace]
 members = [
+  'asset_test',
+
   'core',
   'collector',
   'connector',
   'evemon_to_json',
+  'sde_parser',
   'server',
 ]
