--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-recursion = "1.0.0"
-caph_connector = { path = "../connector" }
+caph_connector = { path = "../connector", features = ["sqlx_types"] }
 futures = "0.3.19"
 serde = { version = "1.0.134", features = ["derive"] }
 serde_json = "1.0.76"
