--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,14 +6,19 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.52"
 axum = { version = "0.4.4", features = ["headers"] }
+base64 = "0.13.0"
 caph_connector = { path = "../connector" }
 caph_core = { path = "../core" }
 chrono = "0.4.19"
 dotenv = "0.15.0"
 headers = "0.3.5"
+hmac = "0.12.0"
+rand = "0.8.4"
+rand_chacha = "0.3.1"
 reqwest = "0.11.9"
 serde = { version = "1.0.134", features = ["derive"] }
 serde_json = "1.0.76"
+sha2 = "0.10.1"
 sqlx = { version = "0.5.10", features = ["chrono", "runtime-tokio-rustls",
 "postgres", "uuid", "offline", "json"] }
 tokio = { version = "1.15.0", features = ["full"] }
