--- a/sde_parser/Makefile
+++ b/sde_parser/Makefile
@@ -1,16 +1,25 @@
-.PHONY: fetch copy psql
+.PHONY: clean psql
 
-fetch:
-	cd input; rm -rf sde sde.zip
+inputs := input/blueprints.yaml input/group_ids.yaml input/type_ids.yaml
+
+input/sde:
 	cd input; wget -O sde.zip https://eve-static-data-export.s3-eu-west-1.amazonaws.com/tranquility/sde.zip
 	cd input; unzip sde.zip
 	cd input; rm -rf sde.zip
 
-copy:
-	cd input; cp sde/fsd/blueprints.yaml .
+input/blueprints.yaml: input/sde
+	cd input; cp sde/fsd/blueprints.yaml blueprints.yaml
 
-psql:
+input/group_ids.yaml: input/sde
+	cd input; cp sde/fsd/groupIDs.yaml group_ids.yaml
+
+input/type_ids.yaml: input/sde
+	cd input; cp sde/fsd/typeIDs.yaml type_ids.yaml
+
+clean:
+	rm -rf input/*
+
+psql: $(inputs)
 	cargo run
-	psql -U postgres -d caph_dev -a -f output/out.sql
-
-all: fetch copy psql
+	psql -U postgres -d caph_dev -a -f output/blueprints.sql
+	psql -U postgres -d caph_dev -a -f output/items.sql
