--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,9 +3,7 @@ name = "caph_server"
 version = "0.1.0"
 edition = "2021"
 
-
 default-run = "caph_server"
-
 
 [dependencies]
 appraisal = { path = "../appraisal" }
@@ -18,7 +16,6 @@ dotenv = "0.15.0"
 futures = "0.3.21"
 headers = "0.3.7"
 hmac = "0.12.1"
-pretty_assertions = "1.2.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reqwest = "0.11.10"
@@ -30,3 +27,6 @@ tokio = { version = "1.18.0", features = ["full"] }
 tracing = "0.1.34"
 tracing-subscriber =  { version = "0.3.11", features = ["env-filter"] }
 uuid = { version = "0.8.2", features = ["v4", "serde"] }
+
+[dev-dependencies]
+pretty_assertions = "1.2.1"
