--- a/sde_parser/Cargo.toml
+++ b/sde_parser/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
 serde_yaml = "0.8.24"
-tracing = "0.1.34"
+tracing = "0.1.35"
 tracing-subscriber =  { version = "0.3.11", features = ["env-filter"] }
-uuid = { version = "1.1.1", features = ["v4"] }
+uuid = { version = "1.1.2", features = ["v4"] }
