Another dependency rewrite

--- a/sde_parser/Makefile
+++ b/sde_parser/Makefile
@@ -1,7 +1,6 @@
 .PHONY: clean psql
 
-inputs  := input/blueprints.yaml input/group_ids.yaml input/type_ids.yaml
-outputs := output/blueprints.sql output/items.sql
+inputs  := input/blueprints.yaml input/group_ids.yaml input/type_ids.yaml input/dogmaEffects.yaml input/typeDogma.yaml input/industrymodifiersources.json input/industrytargetfilters.json
 
 input:
 	mkdir input
@@ -12,6 +11,18 @@ input/sde: input
 	cd input; unzip sde.zip
 	cd input; rm -rf sde.zip
 
+input/industrymodifiersources.json: input
+	cd input; wget -O industrymodifiersources.json https://sde.hoboleaks.space/tq/industrymodifiersources.json
+
+input/industrytargetfilters.json: input
+	cd input; wget -O industrytargetfilters.json https://sde.hoboleaks.space/tq/industrytargetfilters.json
+
+input/dogmaEffects.yaml: input/sde
+	cd input; cp sde/fsd/dogmaEffects.yaml dogmaEffects.yaml
+
+input/typeDogma.yaml: input/sde
+	cd input; cp sde/fsd/typeDogma.yaml typeDogma.yaml
+
 input/blueprints.yaml: input/sde
 	cd input; cp sde/fsd/blueprints.yaml blueprints.yaml
 
@@ -21,24 +32,26 @@ input/group_ids.yaml: input/sde
 input/type_ids.yaml: input/sde
 	cd input; cp sde/fsd/typeIDs.yaml type_ids.yaml
 
-output/blueprints.sql:
-	cargo run
-
-output/items.sql:
+run:
 	cargo run
 
 clean:
 	rm -rf input/*
 	rm -rf output/*
 
-psql: $(inputs) $(outputs)
+download: $(inputs)
+
+psql: clean download run
 	psql -U postgres -d caph_dev -a -f output/blueprints.sql
+	psql -U postgres -d caph_dev -a -f output/dogma.sql
 	psql -U postgres -d caph_dev -a -f output/items.sql
 
-psql_prod: $(inputs) $(outputs)
+psql_prod: $(inputs) run
 	psql -U postgres -d caph -a -f output/blueprints.sql
+	psql -U postgres -d caph -a -f output/dogma.sql
 	psql -U postgres -d caph -a -f output/items.sql
 
-psql_local: $(inputs) $(outputs)
+psql_local: $(inputs) run
 	psql -U postgres -d caph -h localhost -p 5432 -a -f output/blueprints.sql
+	psql -U postgres -d caph -h localhost -p 5432 -a -f output/dogma.sql
 	psql -U postgres -d caph -h localhost -p 5432 -a -f output/items.sql
