--- a/corp_bot/Cargo.toml
+++ b/corp_bot/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 [dependencies]
 appraisal = { path = "../appraisal" }
 caph_connector = { path = "../connector" }
-dotenv = "0.15.0"
+dotenvy = "0.15.1"
 reqwest = "0.11.11"
-sqlx = { version = "0.6.0", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
-tokio = { version = "1.19.2", features = ["full"] }
-tracing = "0.1.35"
-tracing-subscriber =  { version = "0.3.11", features = ["env-filter"] }
-serde = { version = "1.0.137", features = ["derive"] }
+sqlx = { version = "0.6.1", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
+tokio = { version = "1.20.1", features = ["full"] }
+tracing = "0.1.36"
+tracing-subscriber =  { version = "0.3.15", features = ["env-filter"] }
+serde = { version = "1.0.143", features = ["derive"] }
 num-format = "0.4.0"
